# forgejo_sink

./: .gitignore  README.md  fabric_module_setup.md  log_table_auto_initialization.md  pyproject.toml  pytest.ini  sitecustomize.py
.github/workflows/: notebook-tests.yml  tests.yml
backup/fabric/: 0. nb_master.ipynb  01_utils_logging.ipynb  02_utils_config.ipynb  1. nb_load_bronze.ipynb  1.1 nb_inc_merge_watermarkfiles.ipynb  10_bronze_load.ipynb  90_master_per_source.ipynb  dag.json  dag_anva_concern_week.json  dag_anva_meeus_week.json  dag_css_level_week.json  dag_ods_reports_week.json  (+6 more)
config/: spark_config.py
example/: sqlmetadata.sql
modules/: bronze_processor.py  cdc_utils.py  config_utils.py  constants.py  delta_utils.py  error_utils.py  fabric_bootstrap.py  hash_utils.py  log_schemas.py  logging_utils.py  metadata_utils.py  notebook_utils.py  path_utils.py  silver_processor.py  spark_session.py  worker_utils.py
notebooks/: 00_master_orchestrator.ipynb  00_orchestrator.ipynb  01_process_data.ipynb  01_setup_log_tables.ipynb  01_utils_logging.ipynb  02_utils_config.ipynb  03_utils_generate_metadata.ipynb  10_bronze_load.ipynb  11_bronze_watermark_merge.ipynb  20_silver_cdc_merge.ipynb  30_generate_metadata.ipynb  31_fabric_generate_metadata.ipynb  98_analyze_worker_optimization.ipynb  99_bronze_cleanup.ipynb  99_export_delta_to_parquet.ipynb
scripts/: deploy_config.py
tests/: conftest.py  test_hash_utils.py  test_log_table_initialization.py  test_logging_utils.py  test_notebook_utils_unit.py  test_notebooks.py  test_path_utils.py  test_runtime_context.py
(+18 files in other folders)
